# EranYonai-Blog

./: README.md  pyproject.toml
src/: app.py
src/posts/: 22-08-2025_the_art_of_thinking_clearly.md  welcome.md
src/static/css/: custom.css
src/templates/: base.html  index.html  post.html  tag.html
src/utils/: post_manager.py
